<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/sync_item_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sync_item_data"
        app:layout_constraintEnd_toStartOf="@id/sync_item_matricula"
        android:text="@string/msg_sync_item_tipo" />

    <TextView
        android:id="@+id/sync_item_matricula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/sync_item_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sync_item_status"
        android:text="@string/msg_sync_item_registros"
         />

    <TextView
        android:id="@+id/sync_item_data"
        app:layout_constraintHorizontal_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_item_nome"
        app:layout_constraintEnd_toStartOf="@id/sync_item_status"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/msg_sync_item_data"/>

    <TextView
        android:id="@+id/sync_item_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toEndOf="@id/sync_item_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sync_item_matricula"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/msg_sync_item_status" />
</androidx.constraintlayout.widget.ConstraintLayout>