<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/txtItemConfigWSEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/l_descServidor"
            android:text="@string/configws_servidor" />

    <LinearLayout
        android:id="@+id/l_descServidor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtItemConfigWSEndereco"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/txtItemConfigWSPorta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:text="@string/configws_porta" />


        <TextView
            android:id="@+id/txtItemConfigWSPrioridade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:text="@string/configws_prioridade" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>