<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LayoutPadraoConstraint"
    tools:context=".telas.MenuPrincipalCorteMuda">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dip"
        android:theme="@style/LayoutPadraoFrame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:nestedScrollingEnabled="true"
                android:theme="@style/LayoutPadraoConstraintInterno">


                <Button
                    android:id="@+id/btnApontamento"
                    style="@style/LayoutPadraoBttLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:drawableStart="@drawable/wrapper_requisicao"
                    android:drawableTint="@color/white"
                    android:padding="15dip"
                    android:text="@string/btn_apontamento"
                    android:textAlignment="center"
                    android:textColor="@color/white"

                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnConsulta"
                    style="@style/LayoutPadraoBttLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:drawableStart="@drawable/wrapper_consultas"
                    android:drawableTint="@color/white"
                    android:padding="15dip"
                    android:text="@string/btn_consulta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@id/btnApontamento" />

                <Button
                    android:id="@+id/btnSinc"
                    style="@style/LayoutPadraoBttLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dip"
                    android:drawableStart="@drawable/wrapper_sync_grande"
                    android:drawableTint="@color/white"
                    android:padding="15dip"
                    android:text="@string/btn_sincronizar"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnConsulta" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>

    <TextView
        android:id="@+id/txtVersao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/wrapper_bordas"
        android:text="@string/msg_versao_app"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>